--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1,10 +1,10 @@
-.product-form {
+.user-form {
   width: 20rem;
   max-width: 90%;
   margin: auto;
 }
 
-.product-item {
+/* .product-item {
   width: 20rem;
   max-width: 95%;
 }
@@ -22,4 +22,4 @@
 
 .product__description {
   text-align: center;
-}
+} */
