--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -32,6 +32,10 @@
                     </textarea>
                   </div>
 
+                  <% if(editing) { %>
+                    <input type="hidden" name="productId" value="<%= product.id %>">
+                  <% } %>
+
                   <button class="btn" type="submit">
                     <% if(editing) { %>
                       Update Product
