working on orders

--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -6,13 +6,13 @@
         <main>
             <% if (orders.length > 0) { %>
                 <ul>
-                    <% orders.forEach(order => { %>
+                    <% orders.items.forEach(order => { %>
                         <li>
-                            <h1>#<%= order.id %></h1>
+                            <h1>#<%= order._id %></h1>
                             <ul>
                                 <% order.products.forEach(product => { %>
                                     <li>
-                                        <%= product.title %> (<%= product.orderItem.qty %>)
+                                        <%= product.title %> (<%= product.qty %>)
                                     </li>
                                 <% }); %>
                             </ul>
