--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,42 +7,46 @@
     <%- include('../includes/navigation.ejs') %>
 
       <main>
+        <% if (errorMessage) { %>
+          <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
+        
         <% if(editing) { %>
           <form class="product-form" action="/admin/edit-product" method="POST">
-            <% } else { %>
-              <form class="product-form" action="/admin/add-product" method="POST">
-                <% } %>
-                  <div class="form-control">
-                    <label for="title">Title</label>
-                    <input type="text" name="title" id="title" value="<% if(editing) { %> <%= product.title %> <% } %>">
-                  </div>
-                  <div class="form-control">
-                    <label for="imageUrl">Image URL</label>
-                    <input type="text" name="imageUrl" id="imageUrl"
-                      value="<% if(editing) { %> <%= product.imageUrl %> <% } %>">
-                  </div>
-                  <div class="form-control">
-                    <label for="price">Price</label>
-                    <input type="number" name="price" id="price" step="0.01"
-                      value="<% if (editing) { %><%= product.price %><% } %>">
-                  </div>
-                  <div class="form-control">
-                    <label for="description">Description</label>
-                    <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %>
-                    </textarea>
-                  </div>
+        <% } else { %>
+          <form class="product-form" action="/admin/add-product" method="POST">
+        <% } %>
+            <div class="form-control">
+              <label for="title">Title</label>
+              <input type="text" name="title" id="title" value="<% if(editing || hasError) { %> <%= product.title %> <% } %>">
+            </div>
+            <div class="form-control">
+              <label for="imageUrl">Image URL</label>
+              <input type="text" name="imageUrl" id="imageUrl"
+                value="<% if(editing || hasError) { %> <%= product.imageUrl %> <% } %>">
+            </div>
+            <div class="form-control">
+              <label for="price">Price</label>
+              <input type="number" name="price" id="price" step="0.01"
+                value="<% if (editing || hasError) { %><%= product.price %><% } %>">
+            </div>
+            <div class="form-control">
+              <label for="description">Description</label>
+              <textarea name="description" id="description" rows="5"><% if (editing || hasError) { %><%= product.description %><% } %>
+              </textarea>
+            </div>
 
-                  <% if(editing) { %>
-                    <input type="hidden" name="productId" value="<%= product._id %>">
-                  <% } %>
-                  <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                  <button class="btn" type="submit">
-                    <% if(editing) { %>
-                      Update Product
-                      <% } else { %>
-                        Add Product
-                        <% } %>
-                  </button>
-              </form>
+            <% if(editing) { %>
+              <input type="hidden" name="productId" value="<%= product._id %>">
+            <% } %>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <button class="btn" type="submit">
+              <% if(editing) { %>
+                Update Product
+              <% } else { %>
+                Add Product
+              <% } %>
+            </button>
+          </form>
       </main>
       <%- include('../includes/end.ejs') %>
