--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -28,12 +28,19 @@
             <div class="form-control">
               <label for="imageUrl">Image URL</label>
               <input 
+                type="file" 
+                name="image" 
+                id="image">
+            </div>
+            <!-- <div class="form-control">
+              <label for="imageUrl">Image URL</label>
+              <input 
                 class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>" 
                 type="text" 
                 name="imageUrl" 
                 id="imageUrl"
                 value="<% if(editing || hasError) { %> <%= product.imageUrl %> <% } %>">
-            </div>
+            </div> -->
             <div class="form-control">
               <label for="price">Price</label>
               <input 
