--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -26,7 +26,7 @@
                 value="<% if(editing || hasError) { %> <%= product.title %> <% } %>">
             </div>
             <div class="form-control">
-              <label for="imageUrl">Image URL</label>
+              <label for="image">Image</label>
               <input 
                 type="file" 
                 name="image" 
