--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -14,7 +14,20 @@
         <% }) %>
       </ul>
       <div class="centered">
-        <h2>Total: $<%= totalSum %></h2>
+        <h2>Total: $<%= total %></h2>
+      </div>
+      <div class="centered">
+        <button id="order-btn" class="btn">Order</button>
+        <script src="https://js.stripe.com/v3/"></script>
+        <script>
+          var stripe = Stripe('USE YOUR KEY');
+          var orderBtn = document.getElementById("order-btn");
+          orderBtn.addEventListener("click", () => {
+            stripe.redirectToCheckout({
+              sessionId: "<%= sessionId %>"
+            });
+          });
+        </script>
       </div>
     </main>
 <%- include('../includes/end.ejs') %>
